# Pathline

./: .agent.md  .env.example  .gitignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  CLAUDE.md  HANDOFF.md  Pathline  Pathline Architecture.md  PromptPath  PromptPath Architecture Mermaid.md  PromptPath Architecture.md  README.md  TREE.md  _preview_server.py  docker-compose.yml  example_test_suite.json  imports.txt  main.py  package.json  pyproject.toml  run_ivr_assessor.sh
.ai/: .ai.gitignore  .repomixignore  AIR_RULES.md  (+10 more)
backend/python/: .env.example  README.md  pyproject.toml
backend/python/benchmarks/: _fixtures.py  _harness.py  baseline_report.py  profile_exports.py  profile_replay.py  profile_snapshots.py
backend/python/docs/: OPERATIONS.md  PERFORMANCE_BASELINE.md  performance_baseline.json
backend/python/docs/superpowers/plans/: 2026-04-16-ivr-assessment-tool.md
backend/python/docs/superpowers/specs/: 2026-04-16-ivr-assessment-tool-design.md  2026-04-18-native-desktop-wrapper-design.md
backend/python/src/ivr_assessor/: ContentView.swift  IVRWrapperMacApp.swift  MapSessionViewModel.swift  MapSettingsView.swift  NavigationState.swift  SessionResultsView.swift  ai_voice.py  audio_pipeline.py  audio_quality.py  batch_template.py  call_template.py  cli.py  cloudflare_tunnel.py  discovery_loop.py  event_ledger.py  execution_controller.py  exploration.py  inspection.py  ivr_mapper.py  live_map.py  live_map_gui.py  logging_config.py  map_store.py  models.py  multi_session.py  phone_tracker.py  phone_tracker_gui.py  prompt_intelligence.py  recording_pipeline.py  recording_webhook.py  replay_mode.py  reporter.py  response_library.py  scenario_runner.py  sms_server.py  startup_runtime.py  streaming_server.py  stt_service.py  telephony.py  test_suite.py  (+4 more)
backend/python/src/ivr_assessor/backend/routes/: mapper_routes.py  replay_routes.py  run_suite_routes.py  telecom_test_routes.py
backend/python/src/ivr_assessor/backend/ui/: frontend_assets.py  template_loader.py  ui_state.py
backend/python/src/ivr_assessor/config/: __init__.py
backend/python/src/ivr_assessor/events/: __init__.py  annotation_service.py  bookmark_service.py  event_bus.py  event_models.py  event_sink.py  event_types.py  replay_annotation.py  replay_bookmark.py  replay_compare.py  replay_diff.py  replay_loader.py  replay_reducer.py  replay_search.py  replay_service.py  replay_snapshot.py  replay_state.py  replay_timeline.py  snapshot_service.py  snapshot_validator.py  waveform_metadata.py
backend/python/src/ivr_assessor/frontend/static/css/: main.css  run_suites.css
backend/python/src/ivr_assessor/frontend/static/js/: main.js  run_suites.js
backend/python/src/ivr_assessor/frontend/static/js/common/: api.js  dom.js  events.js  state.js  telemetry.js  websocket.js
backend/python/src/ivr_assessor/frontend/templates/: index.html
backend/python/src/ivr_assessor/frontend_backup_20260514_193732/templates/: index.html
backend/python/src/ivr_assessor/monitoring/: __init__.py
backend/python/src/ivr_assessor/replay/: media_replay_service.py
backend/python/src/ivr_assessor/routes/: __init__.py
backend/python/src/ivr_assessor/run_suites/: __init__.py  events.py  loader.py  models.py  reports.py  runner.py  status.py  validators.py
backend/python/src/ivr_assessor/runtime/: __init__.py  recovery_manager.py  runtime_supervisor.py  session_cleanup.py
backend/python/src/ivr_assessor/storage/: __init__.py
backend/python/src/ivr_assessor/testing/: benchmark_overlay.py  evidence_bundle.py  evidence_exporter.py  evidence_manifest.py  failure_classifier.py  integrity_manifest.py  qa_scorer.py  report_generator.py  safety_guards.py  telecom_test_plan.py  telecom_test_result.py  telecom_test_runner.py
backend/python/src/ivr_assessor/ui/: __init__.py
backend/python/src/ivr_assessor/websocket/: __init__.py
backend/python/tests/: test_ai_voice.py  test_audio_pipeline.py  test_batch_template.py  test_call_template.py  test_cli_smoke.py  test_discovery_loop.py  test_dry_run.py  test_event_ledger.py  test_event_sink.py  test_evidence_manifest.py  test_execution_controller.py  test_exploration.py  test_inspection.py  test_ivr_mapper.py  test_live_map.py  test_live_map_gui.py  test_media_replay_service.py  test_multi_session.py  test_performance_benchmarks.py  test_phone_tracker.py  test_prompt_intelligence.py  test_recovery_manager.py  test_replay_analyst_tooling.py  test_replay_audio_alignment.py  test_replay_diff.py  test_replay_mode.py  test_replay_performance.py  test_replay_reducer.py  test_replay_seek_equivalence.py  test_replay_sync.py  test_replay_timeline.py  test_replay_trace.py  test_reporter.py  test_response_library.py  test_run_suites.py  test_runtime_health_routes.py  test_runtime_supervisor.py  test_safety_guards.py  test_scenario_runner.py  test_session_cleanup.py  (+15 more)
backend/python/tests/fixtures/: sample_ivr_trace.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/resources/models/: .gitignore  MODEL-LICENSE.txt  fetch-model.sh  model-manifest.json
desktop/src-tauri/src/: api_boundary.rs  lib.rs  secure_store.rs  sip_bridge.rs  whisper_bridge.rs
services/api/: OPERATIONS.md  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 20260719_0001_harden_api_storage.py
services/api/src/pathline_api/: auth.py  config.py  database.py  main.py  middleware.py  models.py  routes.py  schemas.py
services/api/src/promptpath_api/: main.py
services/api/tests/: conftest.py  test_api_hardening.py
services/deferred/auth/: pyproject.toml
services/deferred/auth/src/auth_service/: main.py
services/deferred/did-manager/: pyproject.toml
services/deferred/did-manager/src/did_manager/: main.py
services/deferred/kms/: pyproject.toml
services/deferred/kms/src/kms/: main.py
services/deferred/notifications/: pyproject.toml
services/deferred/notifications/src/notifications/: main.py
services/deferred/stt/: pyproject.toml
services/deferred/stt/src/stt_service/: main.py
(+710 files in other folders)
