[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathline"
version = "0.1.0"
description = "Pathline: Deterministic IVR Assessment OS"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "openai>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "deepgram-sdk>=3.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    # Phase 1 — audio pipeline + VAD
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "webrtcvad-wheels>=2.0.10",
    # Phase 2 — local STT
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    # Phase 5 — structured logging
    "structlog>=24.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
interactive = ["twilio>=8.0"]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.0",
    "detect-secrets>=1.4",
]
performance = ["uvloop>=0.19"]
gpu = ["ctranslate2[cuda]>=4.0"]
benchmarks = ["jiwer>=3.0"]

[project.scripts]
pathline = "runtime.kernel.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "replay*", "analyst*", "agents*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
python_classes = ["ShouldNotCollectAsTests"]
