[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivr-assessor"
version = "0.1.0"
description = "IVR assessment CLI"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "openai>=1.0", "fastapi>=0.110.0", "uvicorn>=0.29.0", "websockets>=12.0", "deepgram-sdk>=3.0.0", "python-multipart>=0.0.9", "httpx>=0.27.0"]

[project.optional-dependencies]
interactive = ["twilio>=8.0"]
dev = ["pytest>=8.0"]

[project.scripts]
ivr-assessor = "ivr_assessor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_classes = ["ShouldNotCollectAsTests"]
