[package]
name = "pathline-desktop"
version = "0.1.0"
description = "Privacy-first on-device call orchestration"
authors = ["Pathline"]
license = "MIT"
repository = "https://github.com/pathline-ai/pathline"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Pure-Rust SIP/RTP stack (LOCKED: docs/desktop-sip-stack.md, LOCKED_SIP_STACK=rsiprtp).
# Single crate covers SIP signaling (TLS via rustls), RTP, G.711 codecs, and RFC 4733 DTMF.
# No C SDK / FFI (no Linphone/PJSIP) per the privacy-first, fully-inspectable decision.
rsiprtp = "0.4.1"
# Async runtime primitives for the background SIP/RTP task. Tauri already pulls tokio;
# we declare the exact features the bridge uses.
tokio = { version = "1", features = ["net", "sync", "time", "macros", "rt"] }
whisper-rs = "0.16.0"
sha2 = "0.10"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.5"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }
