[project]
name = "pathline-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pathline-shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyJWT>=2.8.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
